# strava-mongo-lambda

./: .env.sample  .gitignore  Dockerfile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  tasks.py
app/: app.py
app/core/: __init__.py  auth.py  cognito.py  db.py  gsheet.py  strava.py
app/core/models/: token.py  user.py
app/templates/: index.html
src/: database.py  function.py  lambda_function.py
strava/swagger_client/: __init__.py  api_client.py  rest.py
strava/swagger_client/models/: __init__.py  body.py  body1.py  body2.py
